--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "rollup -c --watch"
   },
   "dependencies": {
+    "fast-glob": "^3.3.2",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
